--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="table.css">
+    <title>Crear solicitud/modificar</title>
 </head>
 <body>
+    <img class="inicio" src="../imagenes/background.jpeg">
+    <div class="barra">
+        <img src="../imagenes/0.png">
+        <h1>Depatamento de acompañamiento de alumnos</h1>
+    </div>
+    <div class="barraDeBotones">
+        <button class="hoverButton" id="nueva_solicitud">Nueva solicitud</button>
+        <button id="modificar_solicitud">Modificar solicitud</button>
+        <button id="eliminar_solicitud">Eliminar solicitud</button>
+    </div>
+    <div class="tablaSolicitudes">
+        <img src="../imagenes/0.png">
+        <table>
+            <tr>
+                <th>Descripcion</th>
+                <th>Estado</th>
+                <th>Fecha de emision</th>
+            </tr>            
+        </table>
+    <!--Descripcion
+        Estado
+        Fecha de emision-->
+    </div>
+    
 </body>
 </html>
