--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <img id="inicio" src="imagenes/background.jpeg">
+        <img class="inicio" src="imagenes/background.jpeg">
         <div id="square_login">
             <img id="Background_unahur" src="imagenes/0.png">
-            <form onsubmit="validar()">
+            <form id="myForm" onsubmit="validar()">
                 <input id="usuario" type="text" placeholder="Usuario" >
                 <input id="contraseña" type="password" placeholder="Contraseña" >
                 <a id="contraseñaPerdida" href="#">Olvidaste tu contraseña?</a>
