Tp Basico Completed

--- a/Login/index.html
+++ b/Login/index.html
@@ -1,13 +1,14 @@
 <html>
     <head>
-        <link rel="stylesheet" href="index.css">
-        <meta name="viewport" content="width=500, initial-scale=1">
+        <link rel="stylesheet"  href="index.css">
+        <link rel='stylesheet' media='screen and (max-width: 700px) ' href='media.css' />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="index.js"></script>
     </head>
     <body>
-        <img class="inicio" src="imagenes/background.jpeg">
+        <img class="inicio" src="../imagenes/background.jpeg">
         <div id="square_login">
-            <img id="Background_unahur" src="imagenes/0.png">
+            <img id="Background_unahur" src="../imagenes/0.png">
             <form id="myForm" onsubmit="validar()">
                 <input id="usuario" type="text" placeholder="Usuario" >
                 <input id="contraseña" type="password" placeholder="Contraseña" >
