--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -8,7 +8,7 @@
 
     <title>Crear solicitud/modificar</title>
 </head>
-<body >
+<body onload="traer()" >
     <img class="inicio" src="../imagenes/background.jpeg">
     <div class="barra">
         <img src="../imagenes/0.png">
