falta Json y Js

--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -13,6 +13,9 @@
     <div class="barra">
         <img src="../imagenes/0.png">
         <h1>Depatamento de acompañamiento de alumnos</h1>
+        <div >
+            <button class="salir" > Salir</button>
+        </div>
     </div>
     <div class="barraDeBotones">
         <button class="hoverButton" id="nueva_solicitud">Nueva solicitud</button>
