prueba de registrar

--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -37,7 +37,20 @@
                     <th class="primer">Descripcion</th>
                     <th>Estado</th>
                     <th>Fecha de emision</th>
+                    <th><input type="checkbox" class="check" name="check" id="1"></th>
                 </tr>  
+                <tr>
+                    <th class="primer">Descripcion</th>
+                    <th>Estado</th>
+                    <th>Fecha de emision</th>
+                    <th><input type="checkbox" name="check" id="2"></th>
+                </tr>
+                <tr>
+                    <th class="primer">Descripcion</th>
+                    <th>Estado</th>
+                    <th>Fecha de emision</th>
+                    <th><input type="checkbox" name="check" id="3"></th>
+                </tr>
             </tbody>        
         </table>
     <!--Descripcion
