--- a/Login/Registration/registration.html
+++ b/Login/Registration/registration.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet"  href="../../index.css">
         <link rel="stylesheet"  href="index.css">
         <link rel='stylesheet' media='screen and (max-width: 700px) ' href='../media.css' />
