--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -33,23 +33,23 @@
                 </tr>  
             </thead>  
             <tbody id="datos_atraer">
-                <tr>
+                <tr id="1">
                     <th class="primer">Descripcion</th>
                     <th>Estado</th>
                     <th>Fecha de emision</th>
-                    <th><input type="checkbox" class="check" name="check" id="1"></th>
+                    <th><input type="checkbox" class="check" name="check"  onclick="onlyOne(this)"></th>
                 </tr>  
-                <tr>
+                <tr id="2">
                     <th class="primer">Descripcion</th>
                     <th>Estado</th>
                     <th>Fecha de emision</th>
-                    <th><input type="checkbox" name="check" id="2"></th>
+                    <th><input type="checkbox" name="check"  onclick="onlyOne(this)"></th>
                 </tr>
                 <tr>
                     <th class="primer">Descripcion</th>
                     <th>Estado</th>
                     <th>Fecha de emision</th>
-                    <th><input type="checkbox" name="check" id="3"></th>
+                    <th id="3"><input type="checkbox" name="check"  onclick="onlyOne(this)"></th>
                 </tr>
             </tbody>        
         </table>
