--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -30,6 +30,7 @@
                     <th>Descripcion</th>
                     <th>Estado</th>
                     <th>Fecha de emision</th>
+                    <th><!-- CHECKBOX --></th>
                 </tr>  
             </thead>  
             <tbody id="datos_atraer">
