--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -38,19 +38,19 @@
                     <th class="primer">Descripcion</th>
                     <th>Estado</th>
                     <th>Fecha de emision</th>
-                    <th><input type="checkbox" class="check" name="check"  onclick="onlyOne(this)"></th>
+                    <th><input type="checkbox" class="1" name="check"  onclick="onlyOne(this)"></th>
                 </tr>  
                 <tr id="2">
                     <th class="primer">Descripcion</th>
                     <th>Estado</th>
                     <th>Fecha de emision</th>
-                    <th><input type="checkbox" name="check"  onclick="onlyOne(this)"></th>
+                    <th><input type="checkbox" class="2" name="check"  onclick="onlyOne(this)"></th>
                 </tr>
-                <tr>
+                <tr id="3">
                     <th class="primer">Descripcion</th>
                     <th>Estado</th>
                     <th>Fecha de emision</th>
-                    <th id="3"><input type="checkbox" name="check"  onclick="onlyOne(this)"></th>
+                    <th id="3"><input type="checkbox" class="3" name="check"  onclick="onlyOne(this)"></th>
                 </tr>
             </tbody>        
         </table>
