--- a/Mis_solicitudes/nueva_solicitud/index.html
+++ b/Mis_solicitudes/nueva_solicitud/index.html
@@ -6,11 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-
     <title>Nueva solicitud</title>
 </head>
 <body >
-
+    
     <img class="inicio" src="../../imagenes/background.jpeg">
     
     <div class="barra">
@@ -27,7 +26,7 @@
             <h3 >Fecha de emision:</h1>
             <h2 id="fecha"></h1>
         </div>      
-                    <textarea id="w3review" name="w3review" placeholder="Detalle"></textarea>
+                    <textarea id="textoSolicitud" name="w3review" placeholder="Detalle"></textarea>
                     <img src="../../imagenes/0.png">
             <input id="enviar" type="submit" value="Enviar">
     </div>
