--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="menuDesplegable">
         <textarea id="textoSolicitud" name="w3review" placeholder="solicitud a cambiar"></textarea>
-        <input id="enviar" type="submit" value="Enviar">
+        <input id="enviar" type="submit" value="Guardar">
     </div>
           
         
