falta mejorar modificar

--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -20,8 +20,8 @@
     </div>
     <div class="barraDeBotones">
         <button class="hoverButton" id="nueva_solicitud">Nueva solicitud</button>
-        <button id="modificar_solicitud">Modificar solicitud</button>
-        <button id="eliminar_solicitud">Eliminar solicitud</button>
+        <button id="modificar_solicitud" onclick="modificarSolicitudes()">Modificar solicitud</button>
+        <button id="eliminar_solicitud"  onclick="botonEliminar()">Eliminar solicitud</button>
     </div>
     <div class="tablaSolicitudes">
         <img src="../imagenes/0.png">
@@ -35,6 +35,7 @@
                 </tr>  
             </thead>  
             <tbody id="datos_atraer">
+                <tr >
                
                 </tr>
             </tbody>        
