--- a/Menu/index.html
+++ b/Menu/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="barra">
         <img src="../imagenes/0.png">
-        <h1>Depatamento de acompañamiento de alumnos</h1>
+        <h1>Departamento de acompañamiento de alumnos</h1>
     </div>
     <div id="menuTodo">
         <div id="bienvenida">
