--- a/Mis_solicitudes/index.html
+++ b/Mis_solicitudes/index.html
@@ -12,7 +12,7 @@
         <img class="inicio" src="../imagenes/background.jpeg">
         <div class="barra">
             <img src="../imagenes/0.png">
-            <h1>Depatamento de acompañamiento de alumnos</h1>
+            <h1>Departamento de acompañamiento de alumnos</h1>
             <div >
                 <button class="salir" onclick="salir()" > Salir</button>
             </div>
